--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "chart.js": "4.4.2",
     "cookie-es": "1.0.0",
     "eslint-plugin-regexp": "2.2.0",
+    "graphql": "^16.8.1",
+    "graphql-tag": "^2.12.6",
     "jwt-decode": "4.0.0",
     "mapbox-gl": "3.1.2",
     "ofetch": "1.3.3",
@@ -42,6 +44,7 @@
     "swiper": "11.0.7",
     "ufo": "1.4.0",
     "unplugin-vue-define-options": "1.4.2",
+    "villus": "^3.5.0",
     "vue": "3.4.21",
     "vue-chartjs": "5.3.0",
     "vue-flatpickr-component": "11.0.3",
